--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
     <section id="map" style="width: 100%; height: 600px"></section>
 
+    <canvas id="canvas"></canvas>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
@@ -74,7 +76,11 @@
     </script>
     <script type='text/javascript'>
         function screenshot() {
-            html2canvas(document.getElementById('map')).then(function (canvas) {
+            html2canvas(document.getElementById('map'), {
+		useCORS: true,
+		width: document.getElementById('map').offsetWidth,
+		height: document.getElementById('map').offsetHeight,
+	}).then(function (canvas) {
                 const image = canvas.toDataURL("image/png");
                 var newTab = window.open();
                 newTab.document.body.innerHTML = `<img src="${image}" width="auto" height="auto">`;
