--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prueba LeafletJS</title>
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
-        integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14=" crossorigin="" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.2/dist/leaflet.css"
+      integrity="sha256-sA+zWATbFveLLNqWO2gtiw3HL/lh1giY/Inf1BJ0z14="
+      crossorigin=""
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<body>
-
+  <body>
     <h1>Registro Nacional de Barrios Populares</h1>
 
     <button onclick="screenshot()">Click me</button>
@@ -23,72 +29,48 @@
 
     <canvas id="canvas"></canvas>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
-        integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg=" crossorigin=""></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://unpkg.com/leaflet@1.9.2/dist/leaflet.js"
+      integrity="sha256-o9N1jGDZrf5tS+Ft4gbIK7mYMipq9lqpVJ91xHSyKhg="
+      crossorigin=""
+    ></script>
     <script src="html2canvas.min.js"></script>
     <script>
+      var map = L.map("map").setView([51.508, -0.11], 15);
 
-        var map = L.map('map').setView([-40, -65], 4);
-
-        var tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            maxZoom: 19,
-            attribution: '<a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
-        }).addTo(map);
-
-        var circle = L.circle([51.508, -0.11], {
-            color: 'red',
-            fillColor: '#f03',
-            fillOpacity: 0.5,
-            radius: 500
-        }).addTo(map);
-
-        const capture = async () => {
-            navigator.mediaDevices.getDisplayMedia().then(stream => {
-                // Grab frame from stream
-                let track = stream.getVideoTracks()[0];
-                let capture = new ImageCapture(track);
-                capture.grabFrame().then(bitmap => {
-                    // Stop sharing
-                    track.stop();
-                    // Draw the bitmap to canvas
-                    canvas.width = bitmap.width;
-                    canvas.height = bitmap.height;
-                    canvas.getContext('2d').drawImage(bitmap, 0, 0);
-                    // Grab blob from canvas
-                    canvas.toBlob(blob => {
-                        // Do things with blob here
-                        blob.name = `screenshot-${new Date().getTime()}`;
-                        // copy to clipboard
-                        let data = [new ClipboardItem({ [blob.type]: blob })];
-                        navigator.clipboard.write(data);
-                        console.log('output blob:', blob);
-                    });
-                });
-            })
-                .catch(e => console.log(e));
-        };
-
-//capture();
-
-    </script>
-    <script type='text/javascript'>
-        function screenshot() {
-            html2canvas(document.getElementById('map'), {
-		useCORS: true,
-		width: document.getElementById('map').offsetWidth,
-		height: document.getElementById('map').offsetHeight,
-	}).then(function (canvas) {
-                const image = canvas.toDataURL("image/png");
-                var newTab = window.open();
-                newTab.document.body.innerHTML = `<img src="${image}" width="auto" height="auto">`;
-            });
-
+      var tiles = L.tileLayer(
+        "https://tile.openstreetmap.org/{z}/{x}/{y}.png",
+        {
+          maxZoom: 19,
+          attribution:
+            '<a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>',
         }
+      ).addTo(map);
 
+      var circle = L.circle([51.508, -0.11], {
+        color: "red",
+        fillColor: "#f03",
+        fillOpacity: 0.5,
+        radius: 500,
+      }).addTo(map);
     </script>
-</body>
-
+    <script type="text/javascript">
+      function screenshot() {
+        html2canvas(document.getElementById("map"), {
+          useCORS: true,
+          width: document.getElementById("map").offsetWidth,
+          height: document.getElementById("map").offsetHeight,
+        }).then(function (canvas) {
+          const image = canvas.toDataURL("image/png");
+          var newTab = window.open();
+          newTab.document.body.innerHTML = `<img src="${image}" width="auto" height="auto">`;
+        });
+      }
+    </script>
+  </body>
 </html>
